# wisteria-bloom

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
backend/atcoder/: apps.py  serializers.py  urls.py  views.py
backend/authentication/: urls.py  views.py
backend/pixelalchemy/: apps.py  urls.py  views.py
backend/search/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/search/migrations/: 0001_initial.py
backend/wisteriabloom/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  docker-compose.yml  next-sitemap.config.js  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: robots.txt  sitemap-0.xml  sitemap.xml
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: layout.tsx  page.tsx
frontend/src/app/api/atcoder/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/atcoder/: layout.tsx  page.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/pixel-alchemy/: layout.tsx  page.tsx
frontend/src/app/pixel-alchemy/jpg-to-pdf/: layout.tsx  (+1 more)
frontend/src/app/search/: layout.tsx  page.tsx
frontend/src/common/: urls.tsx
frontend/src/components/atcoder/: RandomContestCard.tsx
frontend/src/components/auth/: AuthButton.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/pixel-alchemy/: InputFileForm.tsx  ToolCard.tsx
frontend/src/components/spinner/: Spinner.tsx
frontend/src/types/: next-auth.d.ts
(+25 files in other folders)
