[project]
name = "wisteria-bloom-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "wisteriahuman",email = "wisteriahuman91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "svgwrite (>=1.4.3,<2.0.0)",
    "cairosvg (>=2.7.1,<3.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "django-allauth (>=65.4.1,<66.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
